# GraphingAlgos

./: .gitignore  LICENSE  README.md  config.py  requirements.txt  tailwind.config.ts  visualize.py
Parallel_Graphs_Algo/app/: globals.css  page.tsx
Parallel_Graphs_Algo/components/: algorithm-layout.tsx  code-block.tsx  navbar.tsx  performance-chart.tsx  speedup-chart.tsx
algorithms/: bellman_ford_cuda.py  dijkstra_mpi.py  floyd_warshall_cuda.py  floyd_warshall_mpi.py
app/: globals.css
app/cuda-algorithms/: page.tsx
app/floyd-warshall-mpi/: page.tsx
app/mpi-algorithms/: page.tsx
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py
components/: algorithm-layout.tsx  multi-algorithm-performance-chart.tsx  multi-algorithm-speedup-chart.tsx  navbar.tsx
django_backend/: Makefile  api_test.py  pyproject.toml
django_backend/src/core/: settings.py  urls.py
django_backend/src/cuda/: apps.py  urls.py  views.py
django_backend/src/graph/: apps.py  models.py  serializers.py  urls.py  views.py
django_backend/src/graph/migrations/: 0001_initial.py
django_backend/src/mpi/: apps.py  urls.py  views.py
django_backend/src/sequential/: apps.py  urls.py  views.py
django_backend/src/utils/: config.py  graph.py  timing.py
django_backend/static_files/: config.py  main.py  requirements.txt
django_backend/static_files/stock_algorithms/: bellman_ford_mpi.py  dijkstra_mpi.py
django_backend/static_files/utils/: utils.py
front-end/: package-lock.json  package.json
frontend_final/: tailwind.config.ts
lib/: api.ts
(+21 files in other folders)
